# vlitz

./: CLAUDE.md  Cargo.toml  README.md
src/: agent.js  gum.js  main.rs
src/core/: actions.rs  cli.rs  error.rs  kill.rs  manager.rs  mod.rs  process.rs  ps.rs
src/gum/: command.rs  commander.rs  field.rs  filter.rs  handler.rs  library.rs  list.rs  memory.rs  mod.rs  navigator.rs  selector.rs  session.rs  store.rs  vzdata.rs
src/gum/commands/: memory_cmds.rs  mod.rs  nav_cmds.rs  store_cmds.rs
src/util/: format.rs  logger.rs  mod.rs
