[package]
name = "vlitz"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
frida = {version = "0.16.7", features = ["auto-download"]}
log = "0.4.27"
pretty_env_logger = "0.5.0"
reqwest = "0.12.15"
rustyline = "15.0.0"
serde = "1.0.219"
tokio = "1.45.0"
unicode-segmentation = "1.12.0"
