[package]
name = "vlitz"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
frida = {version = "0.16.7", features = ["auto-download"]}
owo-colors = "4.2.0"
reqwest = "0.12.15"
rustyline = "15.0.0"
serde = "1.0.219"
tokio = "1.45.0"
unicode-segmentation = "1.12.0"
