[package]
name = "vlitz"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.4.7"
frida = {version = "0.16.10", features = ["auto-download"]}
regex = "1.11.1"
reqwest = "0.12.15"
rustyline = "15.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.0"
unicode-segmentation = "1.12.0"
strip-ansi-escapes = "0.2.1"
unicode-width = "0.2.0"
